--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "gulp-pug": "5.0.0",
     "gulp-sass": "^5.0.0",
     "gulp-sourcemaps": "^3.0.0",
+    "gulp-svg-sprite": "^1.5.0",
     "gulp-svgstore": "^9.0.0",
     "postcss": "^8.3.11",
     "postcss-csso": "^5.0.1",
